--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,12 +28,14 @@ jobs:
       - name: Clone the script repository
         uses: actions/checkout@v3
         with:
-          repository: harishnair96/rest-templates-demo
-          path: .
+          repository: harishnair96/rest-template-script
+          path: ./rest-template-script
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          ls
+          cd rest-template-script
           ls
           echo Add other actions to build,
           echo test, and deploy your project.
