--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: harishnair96/rest-template-script
-          path: ./rest-template-script
+          path: .
+          token: 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
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
