--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           repository: harishnair96/rest-template-script
           path: .
-          token: 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
+          token: ${{secrets.MY_PAT}}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
