--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: harishnair96/rest-template-script
-          path: .
+          path: rest-template-script
           token: ${{secrets.MY_PAT}}
 
       # Runs a set of commands using the runners shell
