--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,8 @@ jobs:
           npm install
           cd ..
           node rest-template-script/index.js --template_dir=./rest-templates --metadata_dir=./hasura/metadata
+          git config --global user.email "harishnair@hasura.io"
+          git config --global user.name "Harish Nair"
           git add hasura
           git commit -m "Auto commit with generated metadata"
           git remote set-url --push origin https://harishnair96:${{secrets.MY_PAT}}@github.com/harishnair96/rest-templates-demo.git
