--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
           cd rest-template-script
           npm install
           cd ..
-          node rest-template-script/index.js --template_dir=./rest-templates --metadata_dir=./hasura/metadata
+          node rest-template-script/index.js --template_directory=./rest-templates --metadata_directory=./hasura/metadata
           git config --global user.email "harishnair@hasura.io"
           git config --global user.name "Harish Nair"
           git add hasura
